fix double scrollbar

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     line-height: 1.5;
     min-height: 100dvh;
     font-size: 15px;
+    overflow-x: hidden;
 }
 
 /* make images easier to work with */
@@ -94,18 +95,20 @@ ol[role='list'] {
 
 .header-wrapper{
     height: 100vh;
+    width: 100vw;
     overflow-y: auto;
     overflow-x: hidden;
     perspective: 10px;
+
 }
-.header{ 
+header{ 
  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
   width: 100%;
-z-index: -1;
+z-index: -2;
 transform-style: preserve-3d;
   
 }
@@ -115,10 +118,12 @@ transform-style: preserve-3d;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: -1;
-    transform: translateZ(-10px) scale(2);
+    z-index: -2;
+    transform: translateZ(-20px) scale(4);
     padding: 0;
     margin: 0;
+    
+    
 }
 
 
@@ -127,6 +132,7 @@ transform-style: preserve-3d;
     margin-top: 5rem;
     transform: translateZ(-5px) scale(1.5);
     z-index: -1;
+
 }
 
 .main-navbar{
@@ -156,4 +162,8 @@ transform-style: preserve-3d;
     margin-top: 7rem;
    
     
+}
+
+.about{
+   border: 1px solid black;
 }
